Collada Model Import Hangs Blender #33955

Closed
opened 2013-01-22 04:26:26 +01:00 by Atomic · 5 comments

%%%--- Operating System, Graphics card ---
Windows 7 Ultimate 64bit.
nVidia 460gtx

- Blender version with error, and version that worked ---

Official 2.65a

- Short description of error ---

This model, at the 3D warehouse, hangs Blender when you try to import it using the Collada importer.
Battlestar Orion - BSG-81
http://sketchup.google.com/3dwarehouse/details?mid=47880d8599b9f0fc6af816281787bb9a&prevstart=0

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Download the file from the above link and try to import it.

NOTE: This same file hangs Poser Pro 7, but Houdini Apprentice can read it.

%%%

%%%--- Operating System, Graphics card --- Windows 7 Ultimate 64bit. nVidia 460gtx - Blender version with error, and version that worked --- Official 2.65a - Short description of error --- This model, at the 3D warehouse, hangs Blender when you try to import it using the Collada importer. Battlestar Orion - BSG-81 http://sketchup.google.com/3dwarehouse/details?mid=47880d8599b9f0fc6af816281787bb9a&prevstart=0 - Steps for others to reproduce the error (preferably based on attached .blend file) --- Download the file from the above link and try to import it. NOTE: This same file hangs Poser Pro 7, but Houdini Apprentice can read it. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Gaia, could you please check on this? Thanks!%%%

%%%Gaia, could you please check on this? Thanks!%%%
Member

%%%Actually the import works but due to the huge model with 16000 individual objects it takes a very long time to run. I was able to find one reason for the long runtime (the scene was updated over and over again for each object).

I have committed a partial performance optimization in revision 54398. This speeds up the object creation by a factor of about 100 for this particular model. In that fix i also introduced some Blender Console logging messages, so you can see at least that something happens.

However when you test it now you will note that blender still takes a ~2 minutes before it starts the import and it takes an even longer time (10 minutes) to clean up before it returns to the scene. I still need to find the reason why that happens (I will keep the report open for that).%%%

%%%Actually the import works but due to the huge model with 16000 individual objects it takes a very long time to run. I was able to find one reason for the long runtime (the scene was updated over and over again for each object). I have committed a partial performance optimization in revision 54398. This speeds up the object creation by a factor of about 100 for this particular model. In that fix i also introduced some Blender Console logging messages, so you can see at least that something happens. However when you test it now you will note that blender still takes a ~2 minutes before it starts the import and it takes an even longer time (10 minutes) to clean up before it returns to the scene. I still need to find the reason why that happens (I will keep the report open for that).%%%
Member

%%%I can not do anything for speed optimizations right now (due to running out of time)
And since the primary problem is fixed (blender no longer hangs) i will close this report.

However i believe we should review the Importer to optimize it further.
This may be put back on the list for Blender 2.67%%%

%%%I can not do anything for speed optimizations right now (due to running out of time) And since the primary problem is fixed (blender no longer hangs) i will close this report. However i believe we should review the Importer to optimize it further. This may be put back on the list for Blender 2.67%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33955
No description provided.