[#33955] Collada Model Import Hangs Blender. Optimized Object import for better performance. Added logging messages